--- a/src/app/modals/idea-detalles.component.html
+++ b/src/app/modals/idea-detalles.component.html
@@ -23,7 +23,7 @@
                                 <br>
                             </div>
                             <div *ngIf="idea.tipo === 'PE' || idea.tipo === 'PC'">
-                                <strong>Numero de estudiantes: </strong>{{idea.numeroEstudiantes}}
+                                <strong>Número de estudiantes: </strong>{{idea.numeroEstudiantes}}
                                 <br>
                             </div>
                         </div>
@@ -39,7 +39,7 @@
                                 <br>
                                 <strong>Resumen: </strong>{{idea.tg.resumen}}
                                 <br>
-                                <strong>Numero de estudiantes: </strong>{{idea.tg.numEstudiantes}}
+                                <strong>Número de estudiantes: </strong>{{idea.tg.numEstudiantes}}
                                 <br>
                             </div>
                         </div>
@@ -63,7 +63,7 @@
                                         <br>
                                     </div>
                                     <div *ngIf="i.tipo === 'PE' || i.tipo === 'PC'">
-                                        <strong>Numero de estudiantes: </strong>{{i.numeroEstudiantes}}
+                                        <strong>Número de estudiantes: </strong>{{i.numeroEstudiantes}}
                                         <br>
                                     </div>
                                     <div *ngIf="i.tipo === 'PC'">
@@ -74,7 +74,7 @@
                                         <br>
                                         <strong>Resumen: </strong>{{i.tg.resumen}}
                                         <br>
-                                        <strong>Numero de estudiantes: </strong>{{i.tg.numEstudiantes}}
+                                        <strong>Número de estudiantes: </strong>{{i.tg.numEstudiantes}}
                                         <br>
                                     </div>
                                 </div>
