--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -113,7 +113,7 @@
                 <div class="panel panel-default center" *ngIf="!ideas?.length">
                     <p>No se encontraron resultados</p>
                 </div>
-                <div class="panel panel-default center" *ngFor="let idea of ideas; index as indice">
+                <div class="center" *ngFor="let idea of ideas; index as indice">
                     <idea [idea]="idea" (change)="cambio($event)"></idea>
                 </div>
             </div>
