--- a/src/app/idea/idea.component.html
+++ b/src/app/idea/idea.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="panel-body titulo">{{idea.contenido}}</div>
     <div class="panel-body titulo">Tags: {{tags}}</div>
-    <div class="panel-body ">
+    <div class="panel-body">
         <div class="row">
             <div *ngIf="idea.lights > 0" class="col-xs-4"><a (click)="detallesLight()">Lights: {{idea.lights}}</a></div>
             <div *ngIf="idea.lights == 0" class="col-xs-4">Lights: {{idea.lights}}</div>
@@ -21,17 +21,17 @@
             <div class="col-xs-4"><a style="text-decoration: underline;" (click)="detalles()">Detalles</a></div>
         </div>
     </div>
-    <div class="row">
+    <div class="panel-body row">
         <div class="col-xs-4"><button type="button" (click)="light()" class="btn btn-default btn-block" [style.backgroundColor]="(idea.isLight)? '#BBE3EF' : 'Transparent'"><i class="glyphicon glyphicon-asterisk">
-                </i> Light</button>
+            </i> Light</button>
         </div>
         <div class="col-xs-4"><button type="button" (click)="comentar()" class="btn btn-default btn-block"><i class="glyphicon glyphicon-comment" >
-                </i> Comentar</button>
+            </i> Comentar</button>
         </div>
         <div class="col-xs-4"><button type="button" [disabled]="username.toLowerCase() == idea.usuario.toLowerCase() || idea.tipo == 'PR' 
-                || (idea.usuarioOriginal && idea.usuarioOriginal.toLowerCase() == username.toLowerCase())"
-                class="btn btn-default btn-block" (click)="compartir()">
-                <i class="glyphicon glyphicon-share"></i> Compartir</button>
+            || (idea.usuarioOriginal && idea.usuarioOriginal.toLowerCase() == username.toLowerCase())" class="btn btn-default btn-block"
+            (click)="compartir()">
+            <i class="glyphicon glyphicon-share"></i> Compartir</button>
         </div>
     </div>
 </div>
