--- a/src/app/leaderBoard/leader.component.html
+++ b/src/app/leaderBoard/leader.component.html
@@ -4,7 +4,7 @@
         <div class="col-xs-6">
             <p-dataList [value]="carreras" [paginator]="true" [rows]="5">
                 <p-header>
-                    <b>¡LeaderBoard Carreras!</b>
+                    <b>¡Leaderboard Carreras!</b>
                 </p-header>
                 <ng-template let-carrera pTemplate="item">
                     <div class="ui-g ui-fluid carrera-item">
@@ -45,7 +45,7 @@
             <br>
             <p-dataList [value]="users" [paginator]="true" [rows]="5">
                 <p-header>
-                    <b>¡LeaderBoard Usuarios!</b>
+                    <b>¡Leaderboard Usuarios!</b>
                 </p-header>
                 <ng-template let-user pTemplate="item">
                     <div class="ui-g ui-fluid carrera-item">
