--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -86,7 +86,7 @@
                         <option value="NU">Nueva</option>
                         <option value="PC">Para continuar</option>
                         <option value="PE">Para empezar</option>
-                        <option value="PR">Proyecto</option>
+                        <option *ngIf="role == 'PROFESOR'" value="PR">Proyecto</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -95,14 +95,14 @@
                 </div>
 
                 <div class="form-group" *ngIf="selectedValueTipo == 'PC' || selectedValueTipo == 'PE'">
-                    <label for="numeroest">Numero de estudiantes: </label>
-                    <input class="form-control" type="number" [(ngModel)]="numeroEstudiantes" name="numero">
+                    <label for="numeroest">Número de estudiantes: </label>
+                    <input min="1" max="5" class="form-control" type="number" [(ngModel)]="numeroEstudiantes" name="numero">
                 </div>
 
                 <div class="form-group" *ngIf="selectedValueTipo == 'PE'">
                     <label for="alcance">Alcance: </label>
                     <input class="form-control" type="text" [(ngModel)]="alcance" name="alc">
-                    <label for="problematica">Problematica: </label>
+                    <label for="problematica">Problemática: </label>
                     <textarea class="form-control" type="text" [(ngModel)]="problematica" rows = '5' name="problem"></textarea>
                 </div>
                 <div class="form-group" *ngIf="selectedValueTipo == 'PR'">
@@ -132,7 +132,7 @@
             </form>
         </div>
     </div> 
-        <div class="panel panel-default center" *ngFor="let idea of ideas; index as indice">
+        <div class="center" *ngFor="let idea of ideas; index as indice">
             <idea [idea]="idea" (change)="cambio($event)"></idea>
         </div>
     </div>
