ajuste de tildes

--- a/src/app/error/error.component.html
+++ b/src/app/error/error.component.html
@@ -3,5 +3,5 @@
 <div class="message">
     <h1>404</h1>
     <h2>No hay nada aquí</h2>
-    <h3>Opps error {{message}}</h3>
+    <h3>Uppss error {{message}}</h3>
 </div>
