--- a/src/app/access/login.component.html
+++ b/src/app/access/login.component.html
@@ -46,54 +46,54 @@
 
 <div class="hero">
     <video autoplay loop class="video-area" muted plays-inline>
-         <source src="images/login.mp4" type="video/mp4">
-    </video>      
-</div> 
+        <source src="images/login.mp4" type="video/mp4">
+    </video>
+</div>
 <div class="container">
-        <h1 class="hero-title">¿Todavía no sabes qué tema de trabajo de grado desarrollar?</h1>
-        <div class="col-xs-8">
-            <div class ="sub">
-                <FONT SIZE=4><b><u>Avala</u></b> a tus profesores y compañeros. ¡Demuestra quien es el mejor!</FONT>
-            </div>
-            <div class ="sub">
-                <FONT SIZE=4><b><u>Busca ideas</u></b> de trabajo de grado e interactuar con personas como tú.</FONT>
-            </div>
-            <div class ="sub">
-                <FONT SIZE=4><b><u>Crea ideas:</u></b> Nueva, Para Empezar, Para Continuar y Proyecto... ¡Pruébalas todas! </FONT>
-            </div>
-            <div class ="sub">
-                <FONT SIZE=4><b><u>Conéctate y conoce</u></b> personas de tu interés. ¡No sabes a quien puedes conocer!</FONT>
-            </div>
+    <h1 class="hero-title">¿Todavía no sabes qué tema de trabajo de grado desarrollar?</h1>
+    <div class="col-xs-8">
+        <div class="sub">
+            <FONT SIZE=4><b><u>Avala</u></b> a tus profesores y compañeros. ¡Demuestra quién es el mejor!</FONT>
         </div>
-        <div class="col-xs-4"> 
-            <div class="create-account">
-                <div class="well">
-                    <h1 align= "center" class="login-title">LOGIN</h1>
-                    <form novalidate (ngSubmit)="login()" [formGroup]="loginForm">
-                        <div class="alert alert-danger" *ngIf="errorLogin">
-                            Credenciales incorrectas.
+        <div class="sub">
+            <FONT SIZE=4><b><u>Busca ideas</u></b> de trabajo de grado e interactúa con personas como tú.</FONT>
+        </div>
+        <div class="sub">
+            <FONT SIZE=4><b><u>Crea ideas:</u></b> Nuevas, Para Empezar, Para Continuar y Proyectos... ¡Pruébalas todas! </FONT>
+        </div>
+        <div class="sub">
+            <FONT SIZE=4><b><u>Conéctate y conoce</u></b> personas de tu interés. ¡No sabes a quién puedes conocer!</FONT>
+        </div>
+    </div>
+    <div class="col-xs-4">
+        <div class="create-account">
+            <div class="well">
+                <h1 align="center" class="login-title">LOGIN</h1>
+                <form novalidate (ngSubmit)="login()" [formGroup]="loginForm">
+                    <div class="alert alert-danger" *ngIf="errorLogin">
+                        Credenciales incorrectas.
+                    </div>
+                    <div class="form-group">
+                        <label for="username" class="control-label">Nombre de usuario:</label>
+                        <input [(ngModel)]="username" type="text" class="form-control" id="username" name="username" formControlName="username">
+                        <div class="alert alert-danger" *ngIf="loginForm.get('username').touched && loginForm.get('username').hasError('required')">
+                            Nombre de usuario es requerido.
                         </div>
-                        <div class="form-group">
-                            <label for="username" class="control-label">Nombre de usuario:</label>
-                            <input [(ngModel)]="username" type="text" class="form-control" id="username" name="username" formControlName="username">
-                            <div class="alert alert-danger" *ngIf="loginForm.get('username').touched && loginForm.get('username').hasError('required')">
-                                Nombre de usuario es requerido.
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="password" class="control-label">Contraseña:</label>
+                        <input [(ngModel)]="password" type="password" class="form-control" id="password" name="password" formControlName="pass">
+                        <div class="alert alert-danger" *ngIf="loginForm.get('pass').touched && loginForm.get('pass').hasError('required')">
+                            Contraseña es requerido.
                         </div>
-                        <div class="form-group">
-                            <label for="password" class="control-label">Contraseña:</label>
-                            <input [(ngModel)]="password" type="password" class="form-control" id="password" name="password" formControlName="pass">
-                            <div class="alert alert-danger" *ngIf="loginForm.get('pass').touched && loginForm.get('pass').hasError('required')">
-                                Contraseña es requerido.
-                            </div>
-                        </div>
-                            <!-- <div class="checkbox">
+                    </div>
+                    <!-- <div class="checkbox">
                                 <label><input type="checkbox" name="remember" id="remember"> Remember login</label>
                             </div> -->
-                        <button [disabled]="loginForm.invalid" type="submit" class="btn btn-success btn-block">Ingresar</button>
-                            <!--<a href="/forgot/" class="btn btn-default btn-block">¿Olvidó su Contraseña?</a>-->
-                    </form>
-                </div>
-            </div> 
-        </div>       
-</div> 
+                    <button [disabled]="loginForm.invalid" type="submit" class="btn btn-success btn-block">Ingresar</button>
+                    <!--<a href="/forgot/" class="btn btn-default btn-block">¿Olvidó su Contraseña?</a>-->
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
