--- a/src/app/modals/crear-idea.component.html
+++ b/src/app/modals/crear-idea.component.html
@@ -12,13 +12,14 @@
                     </div>
                     <form>
                         <div class="form-group">
-                            <label for="sel1">Seleccione el tipo de idea:</label>
-                            <select class="form-control" id="sel1" [(ngModel)]="selectedValueTipo" name="tipoIdea" [ngModelOptions]="{standalone: true}">
-                            <option value="NU">Nueva</option>
-                            <option value="PC">Para continuar</option>
-                            <option value="PE">Para empezar</option>
-                            <option *ngIf="role == 'PROFESOR'" value="PR">Proyecto</option>
-                        </select>
+                            <label for="sel1">Seleccione el tipo de idea </label> <a data-toggle="tooltip" title="{{help_idea}}"><span class="label label-default">?</span></a>
+                            <select class="form-control" id="sel1" [(ngModel)]="selectedValueTipo" name="tipoIdea" [ngModelOptions]="{standalone: true}"
+                                (change)="onChange()">
+                                <option value="NU">Nueva</option>
+                                <option value="PC">Para continuar</option>
+                                <option value="PE">Para empezar</option>
+                                <option *ngIf="role == 'PROFESOR'" value="PR">Proyecto</option>
+                            </select>
                         </div>
                         <div class="form-group">
                             <h4>Contenido</h4>
