--- a/src/app/access/login.component.html
+++ b/src/app/access/login.component.html
@@ -50,7 +50,7 @@
     </video>
 </div>
 <div class="container">
-    <h1 class="hero-title">¿Todavía no sabes qué tema de trabajo de grado desarrollar?</h1>
+   <!-- <h1 class="hero-title">¿Todavía no sabes qué tema de trabajo de grado desarrollar?</h1>-->
     <div class="col-xs-8">
         <div class="sub">
             <FONT SIZE=4><b><u>Avala</u></b> a tus profesores y compañeros. ¡Demuestra quién es el mejor!</FONT>
