--- a/src/app/modals/crear-idea.component.html
+++ b/src/app/modals/crear-idea.component.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="modal-footer">
-            <button type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
+            <button #publishButton type="button" (click)="crearIdea()" class="btn btn-primary">Publicar</button>
         </div>
     </div>
 </div>
