--- a/src/app/access/signup.component.html
+++ b/src/app/access/signup.component.html
@@ -31,7 +31,7 @@
         <h2>Información Básica</h2>
         <form novalidate class="form-horizontal" (ngSubmit)="verifyStep1()" [formGroup]="stepOneForm">
             <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre</label>
+                <label class="col-sm-2 control-label">Nombres</label>
                 <div class="col-sm-10">
                     <input [(ngModel)]="nombre" class="form-control" type="text" formControlName="name">
                     <div class="alert alert-danger" *ngIf="stepOneForm.get('name').touched && stepOneForm.get('name').hasError('required')">
@@ -40,7 +40,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Apellido</label>
+                <label class="col-sm-2 control-label">Apellidos</label>
                 <div class="col-sm-10">
                     <input [(ngModel)]="apellido" class="form-control" type="text" formControlName="lastName">
                     <div class="alert alert-danger" *ngIf="stepOneForm.get('lastName').touched && stepOneForm.get('lastName').hasError('required')">
@@ -195,7 +195,7 @@
     <!-- step 3 -->
     <div *ngIf="currentStep == 3" class="well well-lg">
         <h2>Personalidad</h2>
-        <p>Eliga su personalidad (Puede tomar el test aquí: <a target="_blank" href="https://www.16personalities.com/es/test-de-personalidad">Test de Personalidad</a>)
+        <p>Eliga su personalidad (Si no conoce su personalidad, puede tomar el test aquí: <a target="_blank" href="https://www.16personalities.com/es/test-de-personalidad">Test de Personalidad</a>)
             <div class="row">
                 <div class="col-xs-3" *ngFor="let p of personalidades">
                     <a (click)="verifyStep3(p)" class="thumbnail"><img src="images/personalidades/{{p.nombre}}.png" class="img-responsive"></a>
