--- a/src/app/modals/ideasProyecto.component.html
+++ b/src/app/modals/ideasProyecto.component.html
@@ -4,7 +4,7 @@
             <button type="button" class="close" (click)="close()">&times;</button>
             <h4 class="modal-title">Agregar Ideas</h4>
         </div>
-        <div id="ideas-proyecto" class="modal-body">
+        <div id="ideas-proyecto" class="modal-body" style="height: 90%">
             <div class="panel panel-info" *ngFor="let i of ideas">
                 <div class="panel-heading titulo">
                     <div class="row">
