--- a/src/app/modals/operacionIdea.component.html
+++ b/src/app/modals/operacionIdea.component.html
@@ -5,7 +5,7 @@
             <h4 class="modal-title" *ngIf="tipo === 'light'">Lights</h4>
             <h4 class="modal-title" *ngIf="tipo === 'comentarios'">Comentarios</h4>
         </div>
-        <div class="modal-body">
+        <div class="modal-body" style="height:90%">
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <div *ngIf="tipo === 'light'">
