--- a/src/app/modals/idea-detalles.component.html
+++ b/src/app/modals/idea-detalles.component.html
@@ -5,7 +5,7 @@
             <h4 class="modal-title">Detalle de idea</h4>
         </div>
         <br>
-        <div class="modal-body">
+        <div class="modal-body" style="height:90%">
             <div class="row">
                 <div class="col-xs-1"></div>
                 <div class="col-xs-10">
