--- a/src/app/modals/crear-idea.component.html
+++ b/src/app/modals/crear-idea.component.html
@@ -53,7 +53,7 @@
                             </div>
                         </div>
                         <p-multiSelect [options]="tags" [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedTags" 
-                            [panelStyle]="{minWidth:'12em'}" maxSelectedLabels=6 defaultLabel="Elije tags">
+                            [panelStyle]="{minWidth:'12em'}" maxSelectedLabels=6 defaultLabel="Elige tags">
                         </p-multiSelect>
                     </form>
                 </div>
