--- a/src/app/user/myprofile.component.html
+++ b/src/app/user/myprofile.component.html
@@ -145,7 +145,7 @@
                     </div>
 
                     <p-multiSelect [options]="tags" [ngModelOptions]="{standalone: true}" [(ngModel)]="selectedTags" [panelStyle]="{minWidth:'12em'}"
-                        maxSelectedLabels=6 defaultLabel="Elije tags">
+                        maxSelectedLabels=6 defaultLabel="Elige tags">
                     </p-multiSelect>
                     <div class="alert alert-danger" *ngIf="valid === false">
                         <label> {{errorCrearIdea}}</label>
