--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -18,7 +18,7 @@
                 <div class="panel-heading">
                     <h2 class="center">Parámetros de búsqueda</h2>
                     <p-multiSelect  *ngIf="activeTab != 'users' && option==6" [options]="tags" [(ngModel)]="selectedTags" [panelStyle]="{minWidth:'12em'}"
-                        [ngModelOptions]="{standalone: true}" maxSelectedLabels=6 defaultLabel="Elije tags">
+                        [ngModelOptions]="{standalone: true}" maxSelectedLabels=6 defaultLabel="Elige tags">
                     </p-multiSelect>
                     <input *ngIf="activeTab == 'users'" [(ngModel)]="searchAdv" type="text" class="form-control" placeholder="Buscar">
                     <div class="alert alert-danger" *ngIf="error">
