--- a/src/app/admin/admin-estadistica.component.html
+++ b/src/app/admin/admin-estadistica.component.html
@@ -26,17 +26,12 @@
       <div class="col-xs-6">
           <h4 align="center" class="media-heading">
               <font color="#F80013">
-                  <b>USO DE TAGS</b>
+                  <b>5 TAGS MÁS USADOS</b>
             </font>
           </h4>
           <div class="col-xs-1"></div>
           <div class="col-xs-10" align = "center">
               <p-chart type="doughnut" [data]="dataTags"></p-chart>
-              <h4 align="center" class="media-heading">
-                  <font color="#F80013" size="1">
-                      Si algún Tag no aparece es porque no se ha usado.
-                </font>  
-              </h4>
           </div> 
           <br>
       </div>
